# asr

./: .gitignore  README.md
client/: pyproject.toml  shell.nix
client/src/: automatic.py  manual.py
server/: README.md  pyproject.toml  shell.nix
server/src/: __main__.py  faster-whisper.py  paraformer-onnx.py  paraformer.py  whisper.py
