[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "numpy>=2.3.2",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pyperclip>=1.9.0",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
    "webrtcvad>=2.0.10",
]
