[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctranslate2==4.5.0",
    "fastapi>=0.115.14",
    "faster-whisper>=1.1.1",
    "funasr-onnx>=0.4.1",
    "modelscope[audio]>=1.24.1",
    "nvidia-cublas-cu11>=11.11.3.6",
    "nvidia-cudnn-cu11>=9.10.2.21",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "zhconv>=1.4.3",
]
