[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "fastapi>=0.116.1",
    "modelscope[audio]>=1.24.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "zhconv>=1.4.3",
]
